godwoken/testnet-godwoken-web3/testnet-godwoken-web3.yaml
kind: Service
apiVersion: v1
metadata:
  name: testnet-godwoken-web3-svc
  namespace: layer2
spec:
  selector:
    app: testnet-godwoken-web3
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testnet-godwoken-web3
  namespace: layer2
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: testnet-godwoken-web3
  replicas: 1
  template:
    metadata:
      labels:
        app: testnet-godwoken-web3
        logging: "true"
    spec:
      containers:
        - name: testnet-godwoken-web3
          image: nervos/godwoken-js-prebuilds:v0.7.0-rc2
          command:
          - bash
          - "-c"
          - |
            set -ex
            cd godwoken-web3
            yarn run migrate:latest
            yarn workspace @godwoken-web3/api-server start
          ports:
          - name: http
            containerPort: 3000
          volumeMounts:
          - name: testnet-godwoken-web3-env
            mountPath: /godwoken-web3/packages/api-server/.env
            subPath: .env
            readOnly: true
      volumes:
      - name: testnet-godwoken-web3-env
        configMap:
          name: testnet-godwoken-web3-env
