godwoken/testnet-godwoken-web3/testnet-godwoken-web3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: layer2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/server-snippets: |
     location /ws {
      proxy_set_header Upgrade $http_upgrade;
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $remote_addr;
      proxy_set_header Host $host;
      proxy_set_header Connection "upgrade";
      proxy_cache_bypass $http_upgrade;
      }
  name: testnet-godwoken-web3-ingress
spec:
  rules:
  - host: godwoken-testnet-web3-rpc.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: testnet-godwoken-web3-nginx-svc
          servicePort: 80
      - path: /ws
        backend:
          serviceName: testnet-godwoken-web3-nginx-svc
          servicePort: 80
